testbed/src/common/mongodb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-standalone
  namespace: staging
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: mongodb-standalone
    spec:
      containers:
        - name: mongodb-standlone
          image: localhost:32000/nubes/mongo:4.0.10
          ports:
            - containerPort: 27017
              name: mongodb-port
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - port: 27017
      name: mongodb-port
